# metsi-data

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
forestdatamodel/: cli.py  model.py
forestdatamodel/conversion/: fc2internal.py  internal2mela.py  vmi2internal.py
forestdatamodel/enums/: forest_centre.py  internal.py  vmi.py
forestdatamodel/formats/: ForestBuilder.py  Strategy.py  age_supplementing.py  file_io.py  smk_util.py  util.py  vmi_supplementing.py  vmi_util.py
lukefi/metsi/data/: model.py  soa.py
lukefi/metsi/data/formats/: ForestBuilder.py  io_utils.py  smk_util.py
tests/: age_supplement_test.py  cli_test.py  conversion_test.py  file_io_test.py  forest_builder_run_test.py  internal2mela_test.py  land_use_conversion_test.py  model_test.py  naslund_test.py  owner_conversion_test.py  smk_builder_test.py  smk_util_test.py  soa_test.py  species_conversion_test.py  test_util.py  util_test.py  vmi_builder_test.py
tests/resources/: SMK_source.xml  vmi13_stands.csv
